# aoc-2021

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
aoc/: Cargo.toml  cli.yaml
aoc/src/: cli.rs  main.rs
aoc/src/days/: eight.rs  eighteen.rs  eleven.rs  fifteen.rs  five.rs  four.rs  fourteen.rs  mod.rs  nine.rs  one.rs  seven.rs  seventeen.rs  six.rs  sixteen.rs  ten.rs  thirteen.rs  three.rs  twelve.rs  two.rs
aoc/src/utils/: macros.rs
inputs/2021/17/: input.txt
inputs/2021/9/: input.txt
libaoc/: Cargo.toml  README.md
libaoc/src/: daynumber.rs  error.rs  lib.rs
