[package]
name = "aoc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libaoc = {path = "../libaoc"}
clap = { version = "3.0.0-beta.5", features = ["yaml", "regex"] }
dotenv = "0.15"

[[bin]]
name = "aoc"
path = "src/main.rs"


