[package]
name = "aoc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libaoc = {path = "../libaoc"}
clap = { version = "3.0.0-rc.4", features = ["regex", "derive"] }
regex = "*"
dotenv = "0.15"
colored = "2"
itertools = "0.10.3"
petgraph = "0.6.0"

[[bin]]
name = "aoc"
path = "src/main.rs"


